--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.MyBudget" parent="Base.Theme.MyBudget" />
+
+    <style name="Theme.MyBudget.AppBarOverlay" parent="ThemeOverlay.Material3.Dark" />
+
+    <style name="Theme.MyBudget.PopupOverlay" parent="ThemeOverlay.Material3.Light" />
 </resources>
