--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -126,11 +126,10 @@
                         android:layout_height="wrap_content"
                         android:background="?android:attr/selectableItemBackground"
                         android:clickable="true"
-                        android:drawableEnd="@drawable/ic_arrow_back"
+                        android:drawableEnd="@drawable/ic_chevron_right"
                         android:drawableTint="@android:color/darker_gray"
                         android:focusable="true"
                         android:padding="16dp"
-                        android:rotation="180"
                         android:text="Change Password"
                         android:textSize="16sp" />
 
