--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="primaryColor">#FF6200EE</color>
     
+    <!-- Primary colors -->
+    <color name="primary">#FF6200EE</color>
+    <color name="primary_dark">#FF3700B3</color>
+    <color name="accent">#FF03DAC5</color>
+    
+    <!-- Transaction colors -->
+    <color name="expense_red">#FFE53935</color>
+    <color name="income_green">#FF43A047</color>
+    
     <!-- Icon colors -->
     <color name="icon_purple">#7E57C2</color>
     <color name="icon_delete">#F44336</color>
