--- a/app/src/main/res/layout/item_account.xml
+++ b/app/src/main/res/layout/item_account.xml
@@ -51,6 +51,18 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@android:color/holo_green_dark"
+            app:layout_constraintEnd_toStartOf="@id/ivDeleteAccount"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <ImageView
+            android:id="@+id/ivDeleteAccount"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@android:drawable/ic_menu_delete"
+            android:contentDescription="Delete account"
+            app:tint="@android:color/holo_red_dark"
+            android:padding="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
