--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,13 @@
     <item
         android:id="@+id/nav_books"
         android:icon="@android:drawable/ic_menu_agenda"
-        android:title="Livres" />
+        android:title="Books" />
     <item
         android:id="@+id/nav_wallet"
         android:icon="@android:drawable/ic_menu_my_calendar"
-        android:title="Portefeuille" />
-    <item
-        android:id="@+id/nav_charts"
-        android:icon="@android:drawable/ic_menu_sort_by_size"
-        android:title="Graphiques" />
+        android:title="Wallet" />
     <item
         android:id="@+id/nav_more"
         android:icon="@android:drawable/ic_menu_manage"
-        android:title="Plus" />
+        android:title="More" />
 </menu>
